<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/icon_enter_metr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_enter_metr"
            app:layout_constraintBottom_toBottomOf="@+id/enter_metr"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/enter_metr" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/enter_metr"

            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:hint="@string/enter_meters"
            app:layout_constraintStart_toEndOf="@id/icon_enter_metr"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/enter_metr_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/icon_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="92dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_change"
            app:layout_constraintBottom_toBottomOf="@id/change"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/change" />

        <RadioGroup
            android:id="@+id/change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:checkedButton="@id/milya"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@id/icon_change"
            app:layout_constraintTop_toBottomOf="@id/enter_metr">

            <RadioButton
                android:id="@+id/milya"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/convert_to_miles" />

            <RadioButton
                android:id="@+id/yard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/convert_to_yards" />

            <RadioButton
                android:id="@+id/duim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/convert_to_inches" />
        </RadioGroup>

        <ImageView
            android:id="@+id/icon_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_result"
            app:layout_constraintBottom_toBottomOf="@id/result"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/result" />

        <EditText
            android:id="@+id/result"
            style="@style/Widget.MyConverter.TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/translation_result"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/change"
            app:layout_constraintTop_toBottomOf="@id/change" />

        <Button
            android:id="@+id/calculate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/translate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/result"
            app:layout_constraintTop_toBottomOf="@id/result" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>